# Gleos

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
cmake/: pico_sdk.cmake
firmware/: CMakeLists.txt  fw_can.cpp  fw_hello.cpp  fw_hydraulic.cpp  fw_imu.cpp
include/: CMakeLists.txt
include/gleos/: config.h  driver.h  flash.h  gleos.h  i2c.h  ice_defs.h  interval.h  layer3.h  motor.h  pwm.h  shell.h  spi.h  status.h  uart.h  watchdog.h
src/: CMakeLists.txt  common.cpp  i2c.cpp  layer3.cpp  motor.cpp  pwm.cpp  shell.cpp  spi2.cpp  uart.cpp  watchdog.cpp
src/driver/: ak09918.cpp  ak09918.h  bmm150.cpp  bmm150.h  icm20600.cpp  icm20600.h
